fixed rotation of settings dots on mobile

--- a/public/style.scss
+++ b/public/style.scss
@@ -284,7 +284,7 @@ ul {
 
 .showTaskActions {
   @media (max-width: 750px) {
-    margin-right: 5px;
+    width: 10px;
   }
   margin: 5px 18px 5px 5px;
   transition: all 0.5s;
